# fotia

./: Cargo.toml  README.md  bench.toml  build.rs  config.toml
assets/: test.hlsl
assets/scenes/Bistro/: scene.gltf
assets/scenes/issum_the_town_on_capital_isle/: license.txt  scene.gltf
assets/scenes/pica_pica_-_mini_diorama_01/: license.txt  scene.gltf
assets/shaders/: Common.hlsl  Csm.hlsl  DirectionalLight.hlsl  FullscreenVS.hlsl  GPass.hlsl  GammaCorr.hlsl  Light.hlsl  Pbr.hlsl  ShadowCommon.hlsl  Skybox.hlsl  Zpass.hlsl
fotia-bench/: Cargo.toml
fotia-bench/src/: main.rs  settings.rs
fotia-csv-result/: Cargo.toml
fotia-csv-result/src/: main.rs
src/: main.rs  settings.rs
src/collections/: handle.rs  mod.rs  rwc_ring_buffer.rs  sparse_array.rs  sparse_map.rs
src/engine/: camera.rs  gltf.rs  mod.rs
src/multi_gpu/: mod.rs  shaders.rs
src/multi_gpu_renderer/: csm.rs  mod.rs  pso.rs  shaders.rs
src/multi_gpu_renderer/graphs/: mod.rs  multi_gpu.rs  single_gpu.rs
src/multi_gpu_renderer/passes/: csm.rs  directional_light_pass.rs  gamma_corr_pass.rs  gpass.rs  m_csm.rs  mod.rs  zpass.rs
src/ra/: backend.rs  command.rs  container.rs  context.rs  mod.rs  resources.rs  shader.rs  swapchain.rs  system.rs
src/rhi/: backend.rs  command.rs  device.rs  mod.rs  resources.rs  shader.rs  swapchain.rs  types.rs
src/rhi/dx12/: backend.rs  command.rs  conv.rs  device.rs  mod.rs  resources.rs  shader.rs  swapchain.rs
