[package]
name = "fotia"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.1", features = ["bytemuck"] }
gltf = "1.4.1"
hecs = "0.10.5"
image = "0.25.5"
bevy_mikktspace = "0.15.3"
parking_lot = "0.12.3"
range-alloc = "0.1.4"
smallvec = "1.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.9"

[target.'cfg(windows)'.dependencies]
oxidx = { git = "https://github.com/if0ne/oxidx" }
