[package]
name = "fotia"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.1", features = ["bytemuck"] }
gltf = "1.4.1"
hecs = "0.10.5"
image = "0.25.5"
bevy_mikktspace = "0.15.3"
parking_lot = "0.12.3"
range-alloc = "0.1.4"
smallvec = { version = "1.14.0", features = ["const_generics"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.9"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
oxidx = "0.8.0"

[build-dependencies]
fs_extra = "1.3.0"
walkdir = "2.5.0"
